--- a/reference.bib
+++ b/reference.bib
@@ -636,7 +636,7 @@
 }
 
 @inproceedings{Dai2017,
-  author    = {Dai, Angela and Qi, Charles Ruizhongtai and Niessner, Matthias},
+  author    = {Dai, Angela and Qi, Charles R. and Niessner, Matthias},
   title     = {Shape completion using {3D}-encoder-predictor CNNs and shape synthesis},
   booktitle = CVPR,
   year      = {2017}
@@ -1142,8 +1142,8 @@
 }
 
 @inproceedings{He2016,
-  author    = {K. He and X. Zhang and S. Ren and J. Sun},
   title     = {Deep residual learning for image recognition},
+  author    = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
   booktitle = CVPR,
   year      = {2016}
 }
@@ -1433,18 +1433,32 @@
   number  = {6}
 }
 
-@article{Karras2017,
-  author  = {Karras, Tero and Aila, Timo and Laine, Samuli and Lehtinen, Jaakko},
-  title   = {Progressive growing of {GANs} for improved quality, stability, and variation},
-  journal = ICLR,
-  year    = {2017}
+@inproceedings{Karras2017,
+  author    = {Karras, Tero and Aila, Timo and Laine, Samuli and Lehtinen, Jaakko},
+  title     = {Progressive growing of {GANs} for improved quality, stability, and variation},
+  booktitle = ICLR,
+  year      = {2017}
 }
 
-@article{Karras2019,
-  author  = {Karras, Tero and Laine, Samuli and Aila, Timo},
-  title   = {A style-based generator architecture for generative adversarial networks},
-  journal = CVPR,
-  year    = {2019}
+@inproceedings{Karras2019,
+  author    = {Karras, Tero and Laine, Samuli and Aila, Timo},
+  title     = {A style-based generator architecture for generative adversarial networks},
+  booktitle = CVPR,
+  year      = {2019}
+}
+
+@inproceedings{Karras2020,
+  title     = {Analyzing and Improving the Image Quality of {StyleGAN}},
+  author    = {Tero Karras and Samuli Laine and Miika Aittala and Janne Hellsten and Jaakko Lehtinen and Timo Aila},
+  booktitle = CVPR,
+  year      = {2020}
+}
+
+@article{Karras2021,
+  author  = {Tero Karras and Miika Aittala and Samuli Laine and Erik H\"{a}rk\"{o}nen and Janne Hellsten and Jaakko Lehtinen and Timo Aila},
+  journal = {arXiv preprint arXiv:2106.12423},
+  title   = {Alias-Free Generative Adversarial Networks},
+  year    = {2021}
 }
 
 @inproceedings{Kato2018,
@@ -1671,12 +1685,14 @@
   issn    = {0730-0301}
 }
 
+
 @inproceedings{Li2018,
   title     = {{PointCNN}: Convolution on X-transformed points},
   author    = {Li, Yangyan and Bu, Rui and Sun, Mingchao and Wu, Wei and Di, Xinhan and Chen, Baoquan},
   booktitle = NIPS,
   year      = {2018}
 }
+
 
 @inproceedings{Li2018a,
   author    = {Jiaxin Li and Ben M. Chen and Gim Hee Lee},
@@ -1685,7 +1701,6 @@
   year      = 2018
 }
 
-
 @article{Li2020,
   author  = {Xianzhi Li and Lequan Yu and Chi-Wing Fu and Daniel Cohen-Or and Pheng-Ann Heng},
   title   = {Unsupervised detection of distinctive regions on {3D} shapes},
@@ -1693,6 +1708,14 @@
   year    = {2020}
 }
 
+@article{Li2021,
+  title   = {{SP-GAN}: Sphere-Guided {3D} Shape Generation and Manipulation},
+  author  = {Li, Ruihui and Li, Xianzhi and Hui, Ke-Hei and Fu, Chi-Wing},
+  journal = SIG,
+  volume  = {40},
+  number  = {4},
+  year    = {2021}
+}
 
 @article{Lim2016,
   author  = {Lim, Isaak and Gehre, Anne and Kobbelt, Leif},
@@ -1733,7 +1756,6 @@
   booktitle = NIPS,
   year      = {2018}
 }
-
 @inproceedings{Liu2018b,
   title     = {Transductive centroid projection for semi-supervised large-scale recognition},
   author    = {Liu, Yu and Song, Guanglu and Shao, Jing and Jin, Xiao and Wang, Xiaogang},
@@ -1754,6 +1776,7 @@
   booktitle = NIPS,
   year      = {2020}
 }
+
 @article{Liu2020a,
   title   = {{P4Contrast}: Contrastive Learning with Pairs of Point-Pixel Pairs for {RGB-D} Scene Understanding},
   author  = {Yunze Liu and Li Yi and Shanghang Zhang and Qingnan Fan and Thomas Funkhouser and Hao Dong},
@@ -1780,6 +1803,13 @@
   author  = {Liu, Ze and Lin, Yutong and Cao, Yue and Hu, Han and Wei, Yixuan and Zhang, Zheng and Lin, Stephen and Guo, Baining},
   journal = {arXiv preprint arXiv:2103.14030},
   year    = {2021}
+}
+
+@inproceedings{Liu2021b,
+  title={Deep Implicit Moving Least-Squares Functions for {3D} Reconstruction},
+  author={Liu, Shi-Lin and Guo, Hao-Xiang and Pan, Hao and Wang, Peng-Shuai and Tong, Xin and Liu, Yang},
+  booktitle=CVPR,
+  year={2021}
 }
 
 @inproceedings{Loffe2015,
@@ -2109,12 +2139,14 @@
   year      = {2016}
 }
 
+
 @inproceedings{Qi2017,
   author    = {Qi, Charles R. and Yi, Li and Su, Hao and Guibas, Leonidas J.},
   title     = {{PointNet++}: Deep hierarchical feature learning on point sets in a metric space},
   booktitle = NIPS,
   year      = {2017}
 }
+
 
 @inproceedings{Qi2017a,
   author    = {Charles R. Qi and Hao Su and Kaichun Mo and Leonidas J. Guibas},
@@ -2124,7 +2156,7 @@
 }
 
 @inproceedings{Qi2019,
-  author    = {Qi, Charles R and Litany, Or and He, Kaiming and Guibas, Leonidas J},
+  author    = {Qi, Charles R. and Litany, Or and He, Kaiming and Guibas, Leonidas J},
   title     = {Deep {Hough} Voting for {3D} Object Detection in Point Clouds},
   booktitle = CVPR,
   year      = {2019}
@@ -2137,14 +2169,12 @@
   year      = {2016}
 }
 
-
 @techreport{Radford2018,
   author      = {Radford, Alec and Narasimhan, Karthik and Salimans, Tim and Sutskever, Ilya},
   institution = {OpenAI},
   title       = {Improving language understanding by generative pre-training},
   year        = {2018}
 }
-
 
 @inproceedings{Rahaman2019,
   title     = {On the spectral bias of neural networks},
@@ -2286,7 +2316,7 @@
 }
 
 @inproceedings{Savva2016,
-  author    = {M. Savva and F. Yu and Hao Su and M. Aono and B. Chen and D. Cohen-Or and W. Deng and Hang Su and S. Bai and X. Bai and N. Fish and J. Han and E. Kalogerakis and E. G. Learned-Miller and Y. Li and M. Liao and S. Maji and A. Tatsuma and Y. Wang and N. Zhang and Z. Zhou 4},
+  author    = {Savva, Manolis and Yu, Fisher and Su, Hao and Aono, M and Chen, B and Cohen-Or, D and Deng, W and Su, Hang and Bai, Song and Bai, Xiang and others},
   title     = {{SHREC'16 Track} -- Large-scale {3D} shape retrieval from {ShapeNetCore55}},
   booktitle = {Eurographics Workshop on 3D Object Retrieval},
   year      = {2016}
@@ -2298,6 +2328,7 @@
   booktitle = {Pacific Graphics},
   year      = {2004}
 }
+
 
 @inproceedings{Schelten2015,
   author    = {Schelten, K. and Nowozin, S. and Jancsary, J. and Rother, C. and Roth, S.},
@@ -2330,7 +2361,6 @@
   volume  = {31},
   number  = {6}
 }
-
 
 @article{Shao2018,
   title   = {{H-CNN}: spatial hashing based {CNN} for {3D} shape analysis},
@@ -2467,6 +2497,7 @@
   year      = {2016}
 }
 
+
 @inproceedings{Sinha2017,
   author    = {Ayan Sinha and Asim Unmesh and Qixing Huang and Karthik Ramani},
   title     = {{SurfNet}: Generating {3D} shape surfaces using deep residual networks},
@@ -2480,6 +2511,7 @@
   journal = {Journal of computational physics},
   year    = {2018}
 }
+
 
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
@@ -2495,7 +2527,6 @@
   year      = {2020}
 }
 
-
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
   title        = {Improved adversarial systems for {3D} object generation and reconstruction},
@@ -2509,7 +2540,6 @@
   note   = {arXiv:1405.4734 [cs.GR]},
   year   = {2014}
 }
-
 
 @inproceedings{Song2017,
   author    = {Song, Shuran and Yu, Fisher and Zeng, Andy and Chang, Angel X and Savva, Manolis and Funkhouser, Thomas},
@@ -2641,6 +2671,7 @@
   number  = {5}
 }
 
+
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
   author    = {Towaki Takikawa and Joey Litalien and  Kangxue Yin and  Karsten Kreis and  Charles Loop and  Derek Nowrouzezahrai and  Alec Jacobson and  Morgan McGuire and  Sanja Fidler},
@@ -2670,7 +2701,6 @@
   volume  = {23},
   number  = {3}
 }
-
 
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
@@ -2781,6 +2811,7 @@
   number  = {7}
 }
 
+
 @article{Wang2014,
   author  = {Wang, Ruimin and Yang, Zhouwang and Liu, Ligang and Deng, Jiansong and Chen, Falai},
   title   = {Decoupling noise and features via weighted $l_1$-analysis compressed sensing},
@@ -2807,6 +2838,7 @@
   volume  = {174}
 }
 
+
 @article{Wang2016a,
   author  = {Wang, Peng-Shuai and Liu, Yang and Tong, Xin},
   title   = {Mesh denoising via cascaded normal regression},
@@ -2815,7 +2847,6 @@
   volume  = {35},
   number  = {6}
 }
-
 
 @article{Wang2017,
   author  = {Wang, Peng-Shuai and Liu, Yang and Guo, Yu-Xiao and Sun, Chun-Yu and Tong, Xin},
@@ -2839,7 +2870,6 @@
   booktitle = CVPR,
   year      = {2018}
 }
-
 
 @article{Wang2018a,
   author  = {Peng-Shuai Wang and Chun-Yu Sun and Yang Liu and Xin Tong},
@@ -3043,7 +3073,7 @@
 
 @article{Xie2020,
   title   = {{PointContrast}: Unsupervised Pre-training for {3D} Point Cloud Understanding},
-  author  = {Xie, Saining and Gu, Jiatao and Guo, Demi and Qi, Charles R and Guibas, Leonidas J and Litany, Or},
+  author  = {Xie, Saining and Gu, Jiatao and Guo, Demi and Qi, Charles R. and Guibas, Leonidas J and Litany, Or},
   journal = ECCV,
   year    = {2020}
 }
@@ -3123,6 +3153,7 @@
   year    = {2020}
 }
 
+
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
   author  = {Yang, Jiaolong and Li, Hongdong and Campbell, Dylan and Jia, Yunde},
@@ -3152,7 +3183,6 @@
   title     = {{FoldingNet}: Point cloud auto-encoder via deep grid deformation},
   year      = {2018}
 }
-
 
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
@@ -3324,12 +3354,14 @@
   year      = {2019}
 }
 
+
 @inproceedings{Zhang2019a,
   author    = {Ling Zhang and Zhigang Zhu},
   booktitle = threeDV,
   title     = {Unsupervised feature learning for point cloud understanding by contrasting and clustering using graph convolutional neural networks},
   year      = {2019}
 }
+
 
 @article{Zhang2021,
   title   = {Self-Supervised Pretraining of {3D} Features on any Point-Cloud},
@@ -3351,7 +3383,6 @@
   journal = {arXiv preprint arXiv:2012.09164},
   year    = {2020}
 }
-
 
 @article{Zheng2011,
   author  = {Zheng, Youyi and Fu, Hongbo and Au, Oscar Kin-Chung and Tai, Chiew-Lan},
@@ -3386,6 +3417,7 @@
   number  = {3}
 }
 
+
 @article{Zhou2011,
   author  = {Zhou, Kun and Gong, Minmin and Huang, Xin and Guo, Baining},
   title   = {Data-parallel octrees for surface reconstruction},
@@ -3394,7 +3426,6 @@
   volume  = {17},
   number  = {5}
 }
-
 
 @inproceedings{Zhou2016,
   title     = {Fast global registration},
@@ -3417,7 +3448,6 @@
   booktitle = ICCV,
   year      = {2017}
 }
-
 
 @inproceedings{Zhu2020,
   title     = {{AdaCoSeg}: Adaptive Shape Co-Segmentation with Group Consistency Loss},
