--- a/reference.bib
+++ b/reference.bib
@@ -724,11 +724,11 @@
   year      = {2014}
 }
 
-@article{Dosovitskiy2020,
-  title   = {An image is worth 16x16 words: Transformers for image recognition at scale},
-  author  = {Dosovitskiy, Alexey and Beyer, Lucas and Kolesnikov, Alexander and Weissenborn, Dirk and Zhai, Xiaohua and Unterthiner, Thomas and Dehghani, Mostafa and Minderer, Matthias and Heigold, Georg and Gelly, Sylvain and others},
-  journal = {arXiv preprint arXiv:2010.11929},
-  year    = {2020}
+@inproceedings{Dosovitskiy2021,
+  title     = {An image is worth 16x16 words: Transformers for image recognition at scale},
+  author    = {Dosovitskiy, Alexey and Beyer, Lucas and Kolesnikov, Alexander and Weissenborn, Dirk and Zhai, Xiaohua and Unterthiner, Thomas and Dehghani, Mostafa and Minderer, Matthias and Heigold, Georg and Gelly, Sylvain and others},
+  booktitle = ICLR,
+  year      = {2021}
 }
 
 @article{Du2018,
@@ -863,8 +863,7 @@
 
 @inproceedings{Gehring2017,
   author    = {Jonas Gehring and Michael Auli and David Grangier and Denis Yarats and Yann N. Dauphin},
-  title     = {Convolutional sequence to sequence learning
-},
+  title     = {Convolutional sequence to sequence learning},
   booktitle = ICML,
   year      = {2017}
 }
@@ -1806,10 +1805,10 @@
 }
 
 @inproceedings{Liu2021b,
-  title={Deep Implicit Moving Least-Squares Functions for {3D} Reconstruction},
-  author={Liu, Shi-Lin and Guo, Hao-Xiang and Pan, Hao and Wang, Peng-Shuai and Tong, Xin and Liu, Yang},
-  booktitle=CVPR,
-  year={2021}
+  title     = {Deep Implicit Moving Least-Squares Functions for {3D} Reconstruction},
+  author    = {Liu, Shi-Lin and Guo, Hao-Xiang and Pan, Hao and Wang, Peng-Shuai and Tong, Xin and Liu, Yang},
+  booktitle = CVPR,
+  year      = {2021}
 }
 
 @inproceedings{Loffe2015,
@@ -1906,6 +1905,13 @@
   year    = {2014},
   volume  = {14},
   number  = {6}
+}
+
+@inproceedings{Mao2021,
+  title     = {Voxel Transformer for {3D} Object Detection},
+  author    = {Mao, Jiageng and Xue, Yujing and Niu, Minzhe and Bai, Haoyue and Feng, Jiashi and Liang, Xiaodan and Xu, Hang and Xu, Chunjing},
+  booktitle = ICCV,
+  year      = {2021}
 }
 
 @inproceedings{Masci2015,
@@ -2086,6 +2092,13 @@
   year      = {2015}
 }
 
+@inproceedings{Pan2021,
+  title     = {{3D} Object Detection with {PointFormer}},
+  author    = {Pan, Xuran and Xia, Zhuofan and Song, Shiji and Li, Li Erran and Huang, Gao},
+  booktitle = CVPR,
+  year      = {2021}
+}
+
 @article{Panozzo2013,
   author  = {Daniele Panozzo and Ilya Baran and Olga Diamanti and Olga Sorkine-Hornung},
   title   = {Weighted averages on surfaces},
@@ -2125,12 +2138,14 @@
   year      = {2020}
 }
 
+
 @article{Perez2003,
   author  = {P{\'e}rez, Patrick and Gangnet, Michel and Blake, Andrew},
   title   = {Poisson image editing},
   journal = SIG,
   year    = {2003}
 }
+
 
 @inproceedings{Qi2016,
   author    = {Charles R. Qi and Hao Su and Matthias Nie{\ss}ner and Angela Dai and Mengyuan Yan and Leonidas J. Guibas},
@@ -2139,14 +2154,12 @@
   year      = {2016}
 }
 
-
 @inproceedings{Qi2017,
   author    = {Qi, Charles R. and Yi, Li and Su, Hao and Guibas, Leonidas J.},
   title     = {{PointNet++}: Deep hierarchical feature learning on point sets in a metric space},
   booktitle = NIPS,
   year      = {2017}
 }
-
 
 @inproceedings{Qi2017a,
   author    = {Charles R. Qi and Hao Su and Kaichun Mo and Leonidas J. Guibas},
@@ -2315,6 +2328,7 @@
   year      = {2019}
 }
 
+
 @inproceedings{Savva2016,
   author    = {Savva, Manolis and Yu, Fisher and Su, Hao and Aono, M and Chen, B and Cohen-Or, D and Deng, W and Su, Hang and Bai, Song and Bai, Xiang and others},
   title     = {{SHREC'16 Track} -- Large-scale {3D} shape retrieval from {ShapeNetCore55}},
@@ -2328,7 +2342,6 @@
   booktitle = {Pacific Graphics},
   year      = {2004}
 }
-
 
 @inproceedings{Schelten2015,
   author    = {Schelten, K. and Nowozin, S. and Jancsary, J. and Rother, C. and Roth, S.},
@@ -2483,6 +2496,7 @@
   number  = {6}
 }
 
+
 @inproceedings{Silva2002,
   author    = {Silva, Vin D and Tenenbaum, Joshua B},
   title     = {Global versus local methods in nonlinear dimensionality reduction},
@@ -2511,7 +2525,6 @@
   journal = {Journal of computational physics},
   year    = {2018}
 }
-
 
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
@@ -2653,6 +2666,7 @@
   year      = {2015}
 }
 
+
 @article{Sung2015,
   author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas},
   title   = {Data-driven structural priors for shape completion},
@@ -2670,7 +2684,6 @@
   volume  = {30},
   number  = {5}
 }
-
 
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
@@ -2795,6 +2808,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Wald2019,
   author    = {Wald, Johanna and Avetisyan, Armen and Navab, Nassir and Tombari, Federico and Nie{\ss}ner, Matthias},
   title     = {{RIO}: {3D} Object Instance Re-Localization in Changing Indoor Environments},
@@ -2811,7 +2825,6 @@
   number  = {7}
 }
 
-
 @article{Wang2014,
   author  = {Wang, Ruimin and Yang, Zhouwang and Liu, Ligang and Deng, Jiansong and Chen, Falai},
   title   = {Decoupling noise and features via weighted $l_1$-analysis compressed sensing},
@@ -2820,6 +2833,7 @@
   volume  = {33},
   number  = {2}
 }
+
 
 @article{Wang2015,
   author  = {Wang, Peng-Shuai and Fu, Xiao-Ming and Liu, Yang and Tong, Xin and Liu, Shi-Lin and Guo, Baining},
@@ -2837,7 +2851,6 @@
   year    = {2016},
   volume  = {174}
 }
-
 
 @article{Wang2016a,
   author  = {Wang, Peng-Shuai and Liu, Yang and Tong, Xin},
@@ -3139,6 +3152,7 @@
   year      = {2006}
 }
 
+
 @inproceedings{Yan2016,
   author    = {Xinchen Yan and Jimei Yang and Ersin Yumer and Yijie Guo and Honglak Lee},
   title     = {Perspective transformer nets: Learning single-view {3D} object reconstruction without {3D} supervision},
@@ -3152,7 +3166,6 @@
   journal = {arXiv preprint arXiv:2004.10987},
   year    = {2020}
 }
-
 
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
@@ -3340,12 +3353,14 @@
   year      = {2016}
 }
 
+
 @inproceedings{Zhang2018,
   author    = {Zhang, Jiahui and Zhao, Hao and Yao, Anbang and Chen, Yurong and Zhang, Li and Liao, Hongen},
   title     = {Efficient semantic scene completion network with spatial group convolution},
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @inproceedings{Zhang2019,
   title     = {Cascaded Context Pyramid for Full-Resolution {3D} Semantic Scene Completion},
@@ -3354,14 +3369,12 @@
   year      = {2019}
 }
 
-
 @inproceedings{Zhang2019a,
   author    = {Ling Zhang and Zhigang Zhu},
   booktitle = threeDV,
   title     = {Unsupervised feature learning for point cloud understanding by contrasting and clustering using graph convolutional neural networks},
   year      = {2019}
 }
-
 
 @article{Zhang2021,
   title   = {Self-Supervised Pretraining of {3D} Features on any Point-Cloud},
@@ -3377,11 +3390,12 @@
   year      = {2019}
 }
 
-@article{Zhao2020,
-  title   = {Point transformer},
-  author  = {Zhao, Hengshuang and Jiang, Li and Jia, Jiaya and Torr, Philip and Koltun, Vladlen},
-  journal = {arXiv preprint arXiv:2012.09164},
-  year    = {2020}
+
+@inproceedings{Zhao2021,
+  title     = {Point transformer},
+  author    = {Zhao, Hengshuang and Jiang, Li and Jia, Jiaya and Torr, Philip and Koltun, Vladlen},
+  booktitle = ICCV,
+  year      = {2021}
 }
 
 @article{Zheng2011,
@@ -3393,13 +3407,13 @@
   number  = {10}
 }
 
-
 @inproceedings{Zheng2013,
   author    = {Zheng, Bo and Zhao, Yibiao and Yu, Joey C. and Ikeuchi, Katsushi and Zhu, Song-Chun},
   title     = {Beyond point clouds: Scene understanding by reasoning geometry and physics},
   booktitle = CVPR,
   year      = {2013}
 }
+
 
 @inproceedings{Zhong2020,
   title     = {Reconstructing continuous distributions of {3D} protein structure from cryo-{EM} images},
@@ -3416,7 +3430,6 @@
   volume  = {25},
   number  = {3}
 }
-
 
 @article{Zhou2011,
   author  = {Zhou, Kun and Gong, Minmin and Huang, Xin and Guo, Baining},
