--- a/reference.bib
+++ b/reference.bib
@@ -1,32 +1,32 @@
 % Encoding: UTF-8
 
-@String { AAAI     = {AAAI} }
-@String { ADVMATH  = {Adv. Comput. Math.} }
-@String { ANM      = {Appl. Numer. Math.} }
-@String { BMVC     = {BMVC} }
-@String { CAD      = {Computer Aided Design} }
-@String { CAGD     = {Comput. Aided Geom. Des.} }
-@String { CGF      = {Comput. Graph. Forum} }
-@String { CVPR     = {CVPR} }
-@String { ECCV     = {ECCV} }
-@String { EG       = {Comput. Graph. Forum (EG)} }
-@String { ENGCOM   = {Eng. Comput.} }
-@String { ICCV     = {ICCV} }
-@String { ICLR     = {ICLR} }
-@String { ICML     = {ICML} }
-@String { IJNME    = {Int. J. Numer. Meth. Eng.} }
-@String { IMR      = {Int. Meshing Roundtable} }
-@String { MATHCOMP = {Math. Comput.} }
-@String { NIPS     = {NeurIPS} }
-@String { PG       = {Comput. Graph. Forum (PG)} }
-@String { SA       = {ACM Trans. Graph. (SIGGRAPH ASIA)} }
-@String { SGP      = {Comput. Graph. Forum (SGP)} }
-@String { SGPOLD   = {Symp. Geom. Proc.} }
-@String { SIG      = {ACM Trans. Graph. (SIGGRAPH)} }
-@String { threeDV  = {3DV} }
-@String { TOG      = {ACM Trans. Graph.} }
-@String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
+@String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
+@String { TOG      = {ACM Trans. Graph.} }
+@String { threeDV  = {3DV} }
+@String { SIG      = {ACM Trans. Graph. (SIGGRAPH)} }
+@String { SGPOLD   = {Symp. Geom. Proc.} }
+@String { SGP      = {Comput. Graph. Forum (SGP)} }
+@String { SA       = {ACM Trans. Graph. (SIGGRAPH ASIA)} }
+@String { PG       = {Comput. Graph. Forum (PG)} }
+@String { NIPS     = {NeurIPS} }
+@String { MATHCOMP = {Math. Comput.} }
+@String { IMR      = {Int. Meshing Roundtable} }
+@String { IJNME    = {Int. J. Numer. Meth. Eng.} }
+@String { ICML     = {ICML} }
+@String { ICLR     = {ICLR} }
+@String { ICCV     = {ICCV} }
+@String { ENGCOM   = {Eng. Comput.} }
+@String { EG       = {Comput. Graph. Forum (EG)} }
+@String { ECCV     = {ECCV} }
+@String { CVPR     = {CVPR} }
+@String { CGF      = {Comput. Graph. Forum} }
+@String { CAGD     = {Comput. Aided Geom. Des.} }
+@String { CAD      = {Computer Aided Design} }
+@String { BMVC     = {BMVC} }
+@String { ANM      = {Appl. Numer. Math.} }
+@String { ADVMATH  = {Adv. Comput. Math.} }
+@String { AAAI     = {AAAI} }
 
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
@@ -1716,6 +1716,13 @@
   year    = {2021}
 }
 
+@article{Li2021a,
+  title   = {Can Vision Transformers Perform Convolution?},
+  author  = {Shanda Li and Xiangning Chen and Di He and Cho-Jui Hsieh},
+  year    = {2021},
+  journal = {arXiv preprint arXiv:2111.01353}
+}
+
 @article{Lim2016,
   author  = {Lim, Isaak and Gehre, Anne and Kobbelt, Leif},
   title   = {Identifying style of {3D} shapes using deep metric learning},
@@ -1748,13 +1755,13 @@
   booktitle = ECCV,
   year      = {2018}
 }
-
 @inproceedings{Liu2018a,
   title     = {See and think: Disentangling semantic scene completion},
   author    = {Liu, Shice and Hu, Yu and Zeng, Yiming and Tang, Qiankun and Jin, Beibei and Han, Yinhe and Li, Xiaowei},
   booktitle = NIPS,
   year      = {2018}
 }
+
 @inproceedings{Liu2018b,
   title     = {Transductive centroid projection for semi-supervised large-scale recognition},
   author    = {Liu, Yu and Song, Guanglu and Shao, Jing and Jin, Xiao and Wang, Xiaogang},
@@ -1797,11 +1804,11 @@
   author  = {Qinqing Liu and Peng-Shuai Wang and Chunjiang Zhu and Blake Blumenfeld Gaines and Tan Zhu and Jinbo Bi and Minghu Song}
 }
 
-@article{Liu2021a,
-  title   = {Swin transformer: Hierarchical vision transformer using shifted windows},
-  author  = {Liu, Ze and Lin, Yutong and Cao, Yue and Hu, Han and Wei, Yixuan and Zhang, Zheng and Lin, Stephen and Guo, Baining},
-  journal = {arXiv preprint arXiv:2103.14030},
-  year    = {2021}
+@inproceedings{Liu2021a,
+  title        = {Swin transformer: Hierarchical vision transformer using shifted windows},
+  author       = {Liu, Ze and Lin, Yutong and Cao, Yue and Hu, Han and Wei, Yixuan and Zhang, Zheng and Lin, Stephen and Guo, Baining},
+  booksubtitle = ICCV,
+  year         = {2021}
 }
 
 @inproceedings{Liu2021b,
@@ -2131,6 +2138,7 @@
   number  = {2}
 }
 
+
 @inproceedings{Peng2020,
   title     = {Convolutional occupancy networks},
   author    = {Peng, Songyou and Niemeyer, Michael and Mescheder, Lars and Pollefeys, Marc and Geiger, Andreas},
@@ -2145,7 +2153,6 @@
   journal = SIG,
   year    = {2003}
 }
-
 
 @inproceedings{Qi2016,
   author    = {Charles R. Qi and Hao Su and Matthias Nie{\ss}ner and Angela Dai and Mengyuan Yan and Leonidas J. Guibas},
@@ -2321,13 +2328,13 @@
   volume  = {13}
 }
 
+
 @inproceedings{Sauder2019,
   author    = {Jonathan Sauder and Bjarne Sievers},
   title     = {Self-supervised deep learning on point clouds by reconstructing space},
   booktitle = NIPS,
   year      = {2019}
 }
-
 
 @inproceedings{Savva2016,
   author    = {Savva, Manolis and Yu, Fisher and Su, Hao and Aono, M and Chen, B and Cohen-Or, D and Deng, W and Su, Hang and Bai, Song and Bai, Xiang and others},
@@ -2487,6 +2494,7 @@
   volume  = {43}
 }
 
+
 @article{Sidi2011,
   author  = {Oana Sidi and Oliver van Kaick and Yanir Kleiman and Hao Zhang and Daniel Cohen-Or},
   title   = {Unsupervised co-segmentation of a set of shapes via descriptor-space spectral clustering},
@@ -2496,7 +2504,6 @@
   number  = {6}
 }
 
-
 @inproceedings{Silva2002,
   author    = {Silva, Vin D and Tenenbaum, Joshua B},
   title     = {Global versus local methods in nonlinear dimensionality reduction},
@@ -2504,13 +2511,13 @@
   year      = {2002}
 }
 
+
 @inproceedings{Sinha2016,
   author    = {Ayan Sinha and Jing Bai and Karthik Ramani},
   title     = {Deep learning {3D} shape surfaces using geometry images},
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @inproceedings{Sinha2017,
   author    = {Ayan Sinha and Asim Unmesh and Qixing Huang and Karthik Ramani},
@@ -2659,13 +2666,13 @@
   organization = {Eurographics Association}
 }
 
+
 @inproceedings{Sun2015,
   author    = {Xiao Sun and Yichen Wei and Shuang Liang and Xiaoou Tang and Jian Sun},
   title     = {Cascaded hand pose regression},
   booktitle = CVPR,
   year      = {2015}
 }
-
 
 @article{Sung2015,
   author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas},
@@ -2801,13 +2808,13 @@
   year      = {2017}
 }
 
+
 @inproceedings{Velickovic2018,
   title     = {Graph Attention Networks},
   author    = {Veli{\v{c}}kovi{\'{c}}, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Li{\`{o}}, Pietro and Bengio, Yoshua},
   booktitle = ICLR,
   year      = {2018}
 }
-
 
 @inproceedings{Wald2019,
   author    = {Wald, Johanna and Avetisyan, Armen and Navab, Nassir and Tombari, Federico and Nie{\ss}ner, Matthias},
@@ -2825,6 +2832,7 @@
   number  = {7}
 }
 
+
 @article{Wang2014,
   author  = {Wang, Ruimin and Yang, Zhouwang and Liu, Ligang and Deng, Jiansong and Chen, Falai},
   title   = {Decoupling noise and features via weighted $l_1$-analysis compressed sensing},
@@ -2833,7 +2841,6 @@
   volume  = {33},
   number  = {2}
 }
-
 
 @article{Wang2015,
   author  = {Wang, Peng-Shuai and Fu, Xiao-Ming and Liu, Yang and Tong, Xin and Liu, Shi-Lin and Guo, Baining},
@@ -3075,6 +3082,13 @@
   year    = {2021}
 }
 
+@article{Xiao2021,
+  title   = {Early convolutions help transformers see better},
+  author  = {Xiao, Tete and Singh, Mannat and Mintun, Eric and Darrell, Trevor and Doll{\'a}r, Piotr and Girshick, Ross},
+  journal = NIPS,
+  year    = {2021}
+}
+
 @article{Xie2015,
   author  = {Xie, Zhige and Xu, Kai and Shan, Wen and Liu, Ligang and Xiong, Yueshan and Huang, Hui},
   title   = {Projective feature learning for {3D} shapes with multi-view depth images},
@@ -3137,6 +3151,7 @@
   year      = {2002}
 }
 
+
 @inproceedings{Yagou2003,
   author    = {Yagou, H. and Ohtake, Y. and Belyaev, A.G.},
   title     = {Mesh denoising via iterative alpha-trimming and nonlinear diffusion of normals with automatic thresholding},
@@ -3151,7 +3166,6 @@
   booktitle = {Geometric Modeling and Processing - GMP},
   year      = {2006}
 }
-
 
 @inproceedings{Yan2016,
   author    = {Xinchen Yan and Jimei Yang and Ersin Yumer and Yijie Guo and Honglak Lee},
@@ -3337,6 +3351,7 @@
   number  = {7}
 }
 
+
 @article{Zhang2015a,
   author  = {Wangyu Zhang and Bailin Deng and Juyong Zhang and Sofien Bouaziz and Ligang Liu},
   title   = {Guided mesh normal filtering},
@@ -3346,6 +3361,7 @@
   issue   = {7}
 }
 
+
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
   booktitle = ECCV,
@@ -3353,14 +3369,12 @@
   year      = {2016}
 }
 
-
 @inproceedings{Zhang2018,
   author    = {Zhang, Jiahui and Zhao, Hao and Yao, Anbang and Chen, Yurong and Zhang, Li and Liao, Hongen},
   title     = {Efficient semantic scene completion network with spatial group convolution},
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Zhang2019,
   title     = {Cascaded Context Pyramid for Full-Resolution {3D} Semantic Scene Completion},
@@ -3376,6 +3390,7 @@
   year      = {2019}
 }
 
+
 @article{Zhang2021,
   title   = {Self-Supervised Pretraining of {3D} Features on any Point-Cloud},
   author  = {Zhang, Zaiwei and Girdhar, Rohit and Joulin, Armand and Misra, Ishan},
@@ -3390,13 +3405,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Zhao2021,
   title     = {Point transformer},
   author    = {Zhao, Hengshuang and Jiang, Li and Jia, Jiaya and Torr, Philip and Koltun, Vladlen},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Zheng2011,
   author  = {Zheng, Youyi and Fu, Hongbo and Au, Oscar Kin-Chung and Tai, Chiew-Lan},
@@ -3413,7 +3428,6 @@
   booktitle = CVPR,
   year      = {2013}
 }
-
 
 @inproceedings{Zhong2020,
   title     = {Reconstructing continuous distributions of {3D} protein structure from cryo-{EM} images},
@@ -3462,12 +3476,16 @@
   year      = {2017}
 }
 
+
 @inproceedings{Zhu2020,
   title     = {{AdaCoSeg}: Adaptive Shape Co-Segmentation with Group Consistency Loss},
   author    = {Chenyang Zhu and Kai Xu and Siddhartha Chaudhuri and Li Yi and Leonidas Guibas and Hao Zhang},
   year      = {2020},
   booktitle = CVPR
 }
+
+
+
 
 @inproceedings{Zou2017,
   author    = {Chuhang Zou and Ersin Yumer and Jimei Yang and Duygu Ceylan and Derek Hoiem},
