--- a/reference.bib
+++ b/reference.bib
@@ -1,32 +1,32 @@
 % Encoding: UTF-8
 
-@String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
-@String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
-@String { TOG      = {ACM Trans. Graph.} }
-@String { threeDV  = {3DV} }
-@String { SIG      = {ACM Trans. Graph. (SIGGRAPH)} }
-@String { SGPOLD   = {Symp. Geom. Proc.} }
-@String { SGP      = {Comput. Graph. Forum (SGP)} }
-@String { SA       = {ACM Trans. Graph. (SIGGRAPH ASIA)} }
-@String { PG       = {Comput. Graph. Forum (PG)} }
-@String { NIPS     = {NeurIPS} }
-@String { MATHCOMP = {Math. Comput.} }
-@String { IMR      = {Int. Meshing Roundtable} }
-@String { IJNME    = {Int. J. Numer. Meth. Eng.} }
-@String { ICML     = {ICML} }
-@String { ICLR     = {ICLR} }
-@String { ICCV     = {ICCV} }
-@String { ENGCOM   = {Eng. Comput.} }
-@String { EG       = {Comput. Graph. Forum (EG)} }
-@String { ECCV     = {ECCV} }
-@String { CVPR     = {CVPR} }
-@String { CGF      = {Comput. Graph. Forum} }
-@String { CAGD     = {Comput. Aided Geom. Des.} }
-@String { CAD      = {Computer Aided Design} }
-@String { BMVC     = {BMVC} }
-@String { ANM      = {Appl. Numer. Math.} }
-@String { ADVMATH  = {Adv. Comput. Math.} }
 @String { AAAI     = {AAAI} }
+@String { ADVMATH  = {Adv. Comput. Math.} }
+@String { ANM      = {Appl. Numer. Math.} }
+@String { BMVC     = {BMVC} }
+@String { CAD      = {Computer Aided Design} }
+@String { CAGD     = {Comput. Aided Geom. Des.} }
+@String { CGF      = {Comput. Graph. Forum} }
+@String { CVPR     = {CVPR} }
+@String { ECCV     = {ECCV} }
+@String { EG       = {Comput. Graph. Forum (EG)} }
+@String { ENGCOM   = {Eng. Comput.} }
+@String { ICCV     = {ICCV} }
+@String { ICLR     = {ICLR} }
+@String { ICML     = {ICML} }
+@String { IJNME    = {Int. J. Numer. Meth. Eng.} }
+@String { IMR      = {Int. Meshing Roundtable} }
+@String { MATHCOMP = {Math. Comput.} }
+@String { NIPS     = {NeurIPS} }
+@String { PG       = {Comput. Graph. Forum (PG)} }
+@String { SA       = {ACM Trans. Graph. (SIGGRAPH ASIA)} }
+@String { SGP      = {Comput. Graph. Forum (SGP)} }
+@String { SGPOLD   = {Symp. Geom. Proc.} }
+@String { SIG      = {ACM Trans. Graph. (SIGGRAPH)} }
+@String { threeDV  = {3DV} }
+@String { TOG      = {ACM Trans. Graph.} }
+@String { TPAMI    = {IEEE Trans. Pattern Anal. Mach. Intell.} }
+@String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
@@ -2085,6 +2085,15 @@
   year    = {2002}
 }
 
+@article{Oztireli2009,
+  title   = {Feature preserving point set surfaces based on non-linear kernel regression},
+  author  = {{\"O}ztireli, A Cengiz and Guennebaud, Gael and Gross, Markus},
+  journal = EG,
+  volume  = {28},
+  number  = {2},
+  year    = {2009}
+}
+
 @inproceedings{P.2004,
   author    = {BHAT, P. and INGRAM, S. AND TURK, G.},
   title     = {Geometric texture synthesis by example},
@@ -2792,6 +2801,13 @@
   year      = {2018}
 }
 
+@inproceedings{Ummenhofer2021,
+  title     = {Adaptive Surface Reconstruction With Multiscale Convolutional Kernels},
+  author    = {Ummenhofer, Benjamin and Koltun, Vladlen},
+  booktitle = ICCV,
+  year      = {2021}
+}
+
 @article{Vallet2008,
   title   = {Spectral geometry processing with manifold harmonics},
   author  = {Vallet, Bruno and L{\'e}vy, Bruno},
@@ -2801,13 +2817,13 @@
   number  = {2}
 }
 
+
 @inproceedings{Vaswani2017,
   author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
   title     = {Attention is all you need},
   booktitle = NIPS,
   year      = {2017}
 }
-
 
 @inproceedings{Velickovic2018,
   title     = {Graph Attention Networks},
@@ -2823,6 +2839,7 @@
   booktitle = ICCV
 }
 
+
 @article{Wang2012,
   author  = {Jun Wang and Xi Zhang and Zeyun Yu},
   title   = {A cascaded approach for feature-preserving surface mesh denoising},
@@ -2831,7 +2848,6 @@
   volume  = {44},
   number  = {7}
 }
-
 
 @article{Wang2014,
   author  = {Wang, Ruimin and Yang, Zhouwang and Liu, Ligang and Deng, Jiansong and Chen, Falai},
@@ -3144,6 +3160,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Yagou2002,
   author    = {H. Yagou and Y. Ohtake and A. Belyaev},
   title     = {Mesh smoothing via mean and median filtering applied to face normals},
@@ -3342,6 +3359,7 @@
   year      = {2014}
 }
 
+
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
   title   = {Variational mesh denoising using total variation and piecewise constant function space},
@@ -3360,7 +3378,6 @@
   volume  = {34},
   issue   = {7}
 }
-
 
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
@@ -3383,6 +3400,7 @@
   year      = {2019}
 }
 
+
 @inproceedings{Zhang2019a,
   author    = {Ling Zhang and Zhigang Zhu},
   booktitle = threeDV,
@@ -3404,6 +3422,7 @@
   title     = {{3D} point capsule networks},
   year      = {2019}
 }
+
 
 @inproceedings{Zhao2021,
   title     = {Point transformer},
@@ -3469,6 +3488,7 @@
   eprinttype = {arxiv}
 }
 
+
 @inproceedings{Zhu2017,
   author    = {Zhu, Rui and Galoogahi, Hamed Kiani and Wang, Chaoyang and Lucey, Simon},
   title     = {Rethinking reprojection: Closing the loop for pose-aware shape reconstruction from a single image},
@@ -3483,8 +3503,6 @@
   year      = {2020},
   booktitle = CVPR
 }
-
-
 
 
 @inproceedings{Zou2017,
